--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "debug": "^2.2.0",
     "defaults": "^1.0.3",
     "detect-indent": "^5.0.0",
+    "glob": "^7.1.1",
     "ini": "^1.3.4",
     "inquirer": "^3.0.1",
     "invariant": "^2.2.0",
